--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,20 @@ name = "pytest-pylyzer"
 version = "0.1.0"
 description = "A pytest plugin for pylyzer"
 keywords = ["pytest", "pylyzer"]
+classifiers = ["Framework :: Pytest"]
 authors = [{ name = "Loic Riegel", email = "loic.riegel@outlook.fr" }]
 readme = "README.md"
 license = "MIT"
-license-files = ["LICENSE"]
+license-files = ["<pLICENSE"]
 requires-python = ">=3.9"
 dependencies = []
 
 [project.urls]
 Repository = "https://github.com/LoicRiegel/pytest-pylyzer"
+
+[dependency-groups]
+dev = ["pytest"]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
