--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,25 @@ name = "pytest-pylyzer"
 version = "0.1.0"
 description = "A pytest plugin for pylyzer"
 keywords = ["pytest", "pylyzer"]
-classifiers = ["Framework :: Pytest"]
+classifiers = [
+    "Framework :: Pytest",
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "Topic :: Software Development :: Testing",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: Implementation :: CPython",
+    "Programming Language :: Python :: Implementation :: PyPy",
+    "License :: OSI Approved :: MIT License",
+]
 authors = [{ name = "Loic Riegel", email = "loic.riegel@outlook.fr" }]
+maintainers = [{ name = "Loic Riegel", email = "loic.riegel@outlook.fr" }]
 readme = "README.md"
 license = "MIT"
 license-files = ["<pLICENSE"]
@@ -20,3 +37,6 @@ dev = ["pytest"]
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[project.entry-points.pytest11]
+pylyzer = "pytest_pylyzer.plugin"
