--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,10 @@ classifiers = [
     "Topic :: Software Development :: Testing",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
@@ -25,14 +24,14 @@ maintainers = [{ name = "Loic Riegel", email = "loic.riegel@outlook.fr" }]
 readme = "README.md"
 license = "MIT"
 license-files = ["<pLICENSE"]
-requires-python = ">=3.9"
-dependencies = []
+requires-python = ">=3.10"
+dependencies = ["pylyzer"]
 
 [project.urls]
 Repository = "https://github.com/LoicRiegel/pytest-pylyzer"
 
 [dependency-groups]
-dev = ["pytest"]
+dev = ["pytest", "tox"]
 
 [build-system]
 requires = ["hatchling"]
