--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,12 +2,13 @@ name: check
 on:
   workflow_dispatch:
   push:
-    branches: ["main"]
+    branches:
+    - main
   pull_request:
 
 jobs:
   test:
-    name: test with ${{ matrix.env }} on ${{ matrix.os }}
+    name: Run tests with ${{ matrix.env }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -32,11 +33,27 @@ jobs:
       - name: Install Python
         if: matrix.env != '3.13'
         run: uv python install --python-preference only-managed ${{ matrix.env }}
-      - name: Setup test suite
+      - name: Setup tox
         run: tox run -vv --notest --skip-missing-interpreters false
         env:
           TOX_GH_MAJOR_MINOR: ${{ matrix.env }}
       - name: Run test suite
-        run: tox run --skip-pkg-install
+        run: tox run --skip-pkg-install --skip-env lint
         env:
           TOX_GH_MAJOR_MINOR: ${{ matrix.env }}
+
+  link:
+    name: Run linter and pre-commit
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install the latest version of uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+      - name: Install tox
+        run: uv tool install --python-preference only-managed --python 3.13 --with tox-uv --with tox-gh tox
+      - name: Setup tox
+        run: tox run -vv --notest --skip-missing-interpreters false
+      - name: Run test suite
+        run: tox run --skip-pkg-install -e lint
